[FIX] hr,mail: make avatar card popover visible properly for mobile view
PURPOSE
-The card is simply too wide for the display in mobile view.

SPECIFICATIONS
- made the avatar card responsive
- enabled the avatarcard popover for m2x avatar user widget
- close avatar card when clicking on 'send message'

Task-3713375

--- a/addons/mail/static/src/discuss/web/avatar_card/avatar_card_popover.scss
+++ b/addons/mail/static/src/discuss/web/avatar_card/avatar_card_popover.scss
@@ -2,6 +2,9 @@
     img {
         height: 60px;
         aspect-ratio: 1;
+        @media screen  and (max-width: 480px) {
+            height: 30px;
+        }
     }
 
     .o_card_avatar_im_status {
@@ -11,9 +14,16 @@
         background-color: white;
         height: 18px;
         width: 18px;
+        @media screen  and (max-width: 480px) {
+            height: 13px;
+            width: 13px;
+            }
     }
 }
 
 .o_avatar_card {
-    width: 380px;
+    max-width: 380px;
+    @media screen  and (max-width: 480px) {
+        max-width: 240px;
+    }
 }
